# derivatives-and-delusions

./: README.md  pyproject.toml  test.py
src/despair/: __init__.py  sympy_util.py
src/ss/: __init__.py  sympy_util.py
